HIL/src/objects/Relationship_Group__c.object
<CustomObject>
    <description>Custom object to track a combination of Client &amp; Prospect records related via many to many relationship with the Group Member junction object.</description>
    <fields>
        <fullName>Addr_Line1__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line1__c</formula>
        <label>Addr Line1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addr_Line2__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addr Line2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addr_Line3__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addr Line3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Administrative Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Groups3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor_Service_Tier__c</fullName>
        <label>Advisor/Service Tier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_CYMD__c</fullName>
        <formula>Primary_Financial_Account__r.Bday_CYMD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth CYMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_Frequency_Days__c</fullName>
        <formula>CASE( TEXT(Client_Meeting_Frequency__c), 
&quot;Monthly&quot;, 30,
&quot;Bi-Monthly&quot;, 60,
&quot;Quarterly&quot;, 90,
&quot;Semi-Annually&quot;, 180,
&quot;Annually&quot;, 365,
Null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Meeting Frequency Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_Frequency__c</fullName>
        <label>Client Meeting Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_SLA_Text__c</fullName>
        <formula>IF(ISNULL(Next_Meeting_Date_SLA__c),NULL, 
IF( Next_Meeting_Date_SLA__c &lt; TODAY(),&quot;RED&quot;, 
IF (Next_Meeting_Date_SLA__c &lt; TODAY() + 7, &quot;YELLOW&quot;, &quot;GREEN&quot;)))</formula>
        <label>Client Meeting SLA Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_SLA__c</fullName>
        <formula>IF(ISNULL(Next_Meeting_Date_SLA__c),NULL,
IF( Next_Meeting_Date_SLA__c &lt; TODAY(),IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;3red&quot;, 16, 64),
IF (Next_Meeting_Date_SLA__c &lt; TODAY() + 7, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;2yellow&quot;, 16, 64), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;1green&quot;, 16, 64))))</formula>
        <label>Client Meeting SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Service_Frequency_Days__c</fullName>
        <formula>CASE( TEXT(Contact_Service_Frequency__c), 
&quot;Monthly&quot;, 30,
&quot;Bi-Monthly&quot;, 60,
&quot;Quarterly&quot;, 90,
&quot;Semi-Annually&quot;, 180,
&quot;Annually&quot;, 365,
NULL
)</formula>
        <label>Contact Service Frequency Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Service_Frequency__c</fullName>
        <label>Contact Service Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Service_SLA_Text__c</fullName>
        <formula>IF(ISNULL( Next_Contact_Date_SLA__c ),NULL, 
IF( Next_Contact_Date_SLA__c &lt; TODAY(),&quot;RED&quot;, 
IF (Next_Contact_Date_SLA__c &lt; TODAY() + 7, &quot;YELLOW&quot;, &quot;GREEN&quot;)))</formula>
        <label>Contact Service SLA Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Service_SLA__c</fullName>
        <formula>IF(ISNULL( Next_Contact_Date_SLA__c ),NULL, 
IF( Next_Contact_Date_SLA__c &lt; TODAY(),IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;3red&quot;, 16, 64), 
IF (Next_Contact_Date_SLA__c &lt; TODAY() + 7, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;2yellow&quot;, 16, 64), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;1green&quot;, 16, 64))))</formula>
        <label>Contact Service SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Override_Next_Contact_Date__c</fullName>
        <label># Days to Override Next Contact Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Override_Next_Meeting_Date__c</fullName>
        <label># Days to Override Next Meeting Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_FA__c</fullName>
        <formula>Primary_Financial_Account__r.Email_Addr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estate_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estate Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Contacts__c</fullName>
        <label>Household Contacts</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <externalId>true</externalId>
        <label>Household ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Relationship Groups</relationshipLabel>
        <relationshipName>Relationship_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <summarizedField>Group_Member__c.Last_Contact_Date__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <summarizedField>Group_Member__c.Last_Meeting_Date__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Last_Meeting_Date__c</fullName>
        <label>Manual Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Last_Meeting_Stored_del__c</fullName>
        <label>Manual Last Meeting Stored</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manually_Override_Last_Meeting_Date__c</fullName>
        <label>Manually Override Last Meeting Date</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manually_Override_Next_Contact_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Override Next Contact Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manually_Override_Next_Meeting_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Override Next Meeting Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line2__c</formula>
        <label>Name2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <formula>Primary_Financial_Account__r.Name_Line3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Next_Meeting_Date__c</fullName>
        <formula>IF(
	NOT(ISNULL( Manual_Last_Meeting_Stored_del__c )) ,
	IF( 
		ISNULL( Client_Meeting_Frequency_Days__c ),
		NULL, 
		IF( 
			ISNULL( Manual_Last_Meeting_Stored_del__c  ),
			TODAY()-1, 
			 Manual_Last_Meeting_Stored_del__c  + Client_Meeting_Frequency_Days__c 
		)
	),
	IF( 
	ISNULL( Client_Meeting_Frequency_Days__c ),
	NULL, 
	IF( 
		ISNULL( Last_Meeting_Date__c ),
		TODAY()-1, 
		Last_Meeting_Date__c + Client_Meeting_Frequency_Days__c 
	)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Contact_Date_SLA__c</fullName>
        <formula>IF( ISNULL( Contact_Service_Frequency_Days__c ), NULL, 
IF( ISNULL( Last_Contact_Date__c ),TODAY()-1,
IF(Manually_Override_Next_Contact_Date__c = True,(Last_Contact_Date__c + Contact_Service_Frequency_Days__c) + Days_to_Override_Next_Contact_Date__c, 
IF(AND(NOT(ISBLANK(Last_Contact_Date__c)),ISPICKVAL(Contact_Service_Frequency__c,&quot;None&quot;)),NULL,
Last_Contact_Date__c + Contact_Service_Frequency_Days__c ))))</formula>
        <label>Next Contact Date (SLA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Contact_Next_Meeting_Match__c</fullName>
        <formula>IF(Next_Contact_Date_SLA__c = Next_Meeting_Date_SLA__c,TRUE,FALSE)</formula>
        <label>Next Contact/Next Meeting Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_Date_SLA__c</fullName>
        <formula>IF( ISNULL( Client_Meeting_Frequency_Days__c ), NULL, 
IF( ISNULL( Last_Meeting_Date__c ),TODAY()-1,
IF(Manually_Override_Next_Meeting_Date__c = True,(Last_Meeting_Date__c + Client_Meeting_Frequency_Days__c) + Days_to_Override_Next_Meeting_Date__c,
IF(AND(NOT(ISBLANK(Last_Meeting_Date__c)),ISPICKVAL(Client_Meeting_Frequency__c,&quot;None&quot;)),NULL,Last_Meeting_Date__c + Client_Meeting_Frequency_Days__c ))))</formula>
        <label>Next Meeting Date (SLA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Group_Members__c</fullName>
        <label># of Group Members</label>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Business__c</fullName>
        <formula>Primary_Financial_Account__r.Work_Phone__c</formula>
        <label>Phone Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Fax__c</fullName>
        <formula>Primary_Financial_Account__r.Fax_Phone__c</formula>
        <label>Phone Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Home__c</fullName>
        <formula>Primary_Financial_Account__r.Home_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Other__c</fullName>
        <formula>Primary_Financial_Account__r.Alt_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceMetrix_Tier__c</fullName>
        <formula>if( Total_Primary_Asset_Value__c &lt;= 50000, &quot;1&quot;,
 if( Total_Primary_Asset_Value__c &lt;= 100000, &quot;2&quot;,
 if( Total_Primary_Asset_Value__c &lt;= 250000, &quot;3&quot;,
 if( Total_Primary_Asset_Value__c &lt;= 500000, &quot;4&quot;,
 if( Total_Primary_Asset_Value__c &lt;= 1000000, &quot;5&quot;,
 &quot;6&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceMetrix Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Financial Account for this Household based on Household feed or FC selection.</inlineHelpText>
        <label>Primary Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Relationship Groups</relationshipLabel>
        <relationshipName>Relationship_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Code</label>
        <referenceTo>Rep_Code__c</referenceTo>
        <relationshipLabel>Relationship Groups</relationshipLabel>
        <relationshipName>Relationship_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Asset_Value__c</fullName>
        <label>Total Primary Asset Value</label>
        <summarizedField>Group_Member__c.Total_Primary_Asset_RU__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Cash_Available__c</fullName>
        <label>Total Primary Cash Available</label>
        <summarizedField>Group_Member__c.Total_Primary_Cash_Available_RU__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Money_Market__c</fullName>
        <label>Total Primary Money Market</label>
        <summarizedField>Group_Member__c.Total_Primary_Money_Market_RU__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Revenue_Value__c</fullName>
        <label>Total Primary Revenue Value</label>
        <summarizedField>Group_Member__c.Total_Primary_Revenue_RU__c</summarizedField>
        <summaryForeignKey>Group_Member__c.Relationship_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holding Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship Group</label>
    <listViews>
        <fullName>Households</fullName>
        <columns>NAME</columns>
        <columns>Household_ID__c</columns>
        <columns>Primary_Financial_Account__c</columns>
        <columns>Rep_Code__c</columns>
        <columns>Name1__c</columns>
        <columns>Name2__c</columns>
        <columns>Name3__c</columns>
        <columns>Addr_Line1__c</columns>
        <columns>Addr_Line2__c</columns>
        <columns>Addr_Line3__c</columns>
        <columns>Birth_CYMD__c</columns>
        <columns>Phone_Home__c</columns>
        <columns>Phone_Business__c</columns>
        <columns>Phone_Fax__c</columns>
        <columns>Total_Primary_Asset_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship_Group__c.HL_Household</value>
        </filters>
        <label>Households</label>
    </listViews>
    <listViews>
        <fullName>HouseholdsAssets</fullName>
        <columns>NAME</columns>
        <columns>Household_ID__c</columns>
        <columns>Primary_Financial_Account__c</columns>
        <columns>Rep_Code__c</columns>
        <columns>Name1__c</columns>
        <columns>Name2__c</columns>
        <columns>Name3__c</columns>
        <columns>Addr_Line1__c</columns>
        <columns>Addr_Line2__c</columns>
        <columns>Addr_Line3__c</columns>
        <columns>Birth_CYMD__c</columns>
        <columns>Phone_Home__c</columns>
        <columns>Phone_Business__c</columns>
        <columns>Phone_Fax__c</columns>
        <columns>Total_Primary_Asset_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship_Group__c.HL_Household</value>
        </filters>
        <filters>
            <field>Total_Primary_Asset_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2015 12:00 AM</value>
        </filters>
        <label>Households-Assets</label>
    </listViews>
    <listViews>
        <fullName>Households_Custom</fullName>
        <columns>NAME</columns>
        <columns>Household_ID__c</columns>
        <columns>Primary_Financial_Account__c</columns>
        <columns>Rep_Code__c</columns>
        <columns>PriceMetrix_Tier__c</columns>
        <columns>Name1__c</columns>
        <columns>Name2__c</columns>
        <columns>Name3__c</columns>
        <columns>Addr_Line1__c</columns>
        <columns>Addr_Line2__c</columns>
        <columns>Addr_Line3__c</columns>
        <columns>Birth_CYMD__c</columns>
        <columns>Phone_Home__c</columns>
        <columns>Phone_Business__c</columns>
        <columns>Phone_Fax__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship_Group__c.Custom_Household</value>
        </filters>
        <label>Households-Custom</label>
    </listViews>
    <listViews>
        <fullName>PriceMetrix_Tier_6</fullName>
        <columns>NAME</columns>
        <columns>Contact_Service_Frequency__c</columns>
        <columns>Client_Meeting_Frequency__c</columns>
        <columns>Advisor_Service_Tier__c</columns>
        <columns>PriceMetrix_Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PriceMetrix_Tier__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>PriceMetrix Tier 6</label>
    </listViews>
    <listViews>
        <fullName>Relationship_Groups</fullName>
        <columns>NAME</columns>
        <columns>Household_ID__c</columns>
        <columns>Primary_Financial_Account__c</columns>
        <columns>Rep_Code__c</columns>
        <columns>PriceMetrix_Tier__c</columns>
        <columns>Name1__c</columns>
        <columns>Name2__c</columns>
        <columns>Name3__c</columns>
        <columns>Addr_Line1__c</columns>
        <columns>Addr_Line2__c</columns>
        <columns>Addr_Line3__c</columns>
        <columns>Birth_CYMD__c</columns>
        <columns>Phone_Home__c</columns>
        <columns>Phone_Business__c</columns>
        <columns>Phone_Fax__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship_Group__c.Relationship_Group</value>
        </filters>
        <label>Relationship Groups</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Groups</pluralLabel>
    <recordTypes>
        <fullName>Custom_Household</fullName>
        <active>true</active>
        <description>This is a custom modification to a household that can be managed by rep.</description>
        <label>Custom Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>HL_Household</fullName>
        <active>true</active>
        <description>Hilliard Lyons Household. These can only be created through the integration and cannot be edited.</description>
        <label>HL - Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relationship_Group</fullName>
        <active>true</active>
        <label>Relationship Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>NextContactDateOverride</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL(Days_to_Override_Next_Contact_Date__c)),Manually_Override_Next_Contact_Date__c= False)</errorConditionFormula>
        <errorDisplayField>Days_to_Override_Next_Contact_Date__c</errorDisplayField>
        <errorMessage>You must check the &quot;Manually Override Next Contact Date&quot; Checkbox in order to populate this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NextMeetingDateOverride</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL(Days_to_Override_Next_Meeting_Date__c)),Manually_Override_Next_Meeting_Date__c= False)</errorConditionFormula>
        <errorDisplayField>Days_to_Override_Next_Meeting_Date__c</errorDisplayField>
        <errorMessage>You must check the &quot;Manually Override Next Meeting Date&quot; Checkbox in order to populate this field.</errorMessage>
    </validationRules>
</CustomObject>